tests/bad/example-e05b.rat
fn Fun (mut x: Int) -> Void {
  return;
}

fn Main () -> Void {
  Fun(0);
  return;
}
